--- a/src/BlogApp.WebApi/appsettings.json
+++ b/src/BlogApp.WebApi/appsettings.json
@@ -18,8 +18,8 @@
   },
   "Email": {
     "Host": "smtp.gmail.com",
-    "Email": "khushboqof.elbek@gmail.com",
-    "Password": "rfqapkwqkdyszyzo"
+    "Email": "dduvgap@gmail.com",
+    "Password": "gszjjtuegfvghwur"
   },
 
   "Serilog": {
