--- a/src/BlogApp.WebApi/appsettings.json
+++ b/src/BlogApp.WebApi/appsettings.json
@@ -35,7 +35,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logo/log.txt",
+          "path": "Logs/log.txt",
           "rollingInterval": "Day"
         }
       },
