--- a/src/BlogApp.WebApi/appsettings.json
+++ b/src/BlogApp.WebApi/appsettings.json
@@ -19,7 +19,7 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Email": "dduvgap@gmail.com",
-    "Password": "gszjjtuegfvghwur"
+    "Password": "npvsohvbknfecnny"
   },
 
   "Serilog": {
