--- a/src/BlogApp.WebApi/appsettings.json
+++ b/src/BlogApp.WebApi/appsettings.json
@@ -18,7 +18,7 @@
   },
   "Email": {
     "Host": "smtp.gmail.com",
-    "EmailAddress": "RUAPB.info@gmail.com",
+    "Email": "RUAPB.info@gmail.com",
     "Password": "aegnzqttpyqsupfy"
   },
 
